# px4_drone_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml  nav2_params.yaml  rviz2_config.rviz  slam_params.yaml
launch/: sim.launch.py
scripts/: gz_pose_relay.py  scan_stabilizer.py  scenarioManager.py
src/: scan_stabilizer.py  scenarioManager.py  waypoint_control.cpp
worlds/ecn_campus/: ecn_campus.sdf  model.config  model.sdf  target_points.json
worlds/ecn_campus/meshes/: model.glb
worlds/walls/: model.sdf  target_points.json
